@@ -1,5 +1,5 @@
 include ../Makefile.settings
-DOCS = ctrlproxy.1 ctrlproxy-admin.1 ctrlproxy_config.5 user-guide.html user-guide/index.html ctrlproxy.1.html ctrlproxy-admin.1.html ctrlproxy_config.5.html help.txt
+DOCS = ctrlproxy.1 ctrlproxyd.8 ctrlproxy-admin.1 ctrlproxy_config.5 user-guide.html user-guide/index.html ctrlproxy.1.html ctrlproxyd.8.html ctrlproxy-admin.1.html ctrlproxy_config.5.html help.txt
 
 .PHONY: all manpages clean distclean
 
@@ -7,7 +7,7 @@ all: $(DOCS)
 
 dist: all
 
-manpages: ctrlproxy.1 ctrlproxy_config.5 ctrlproxy-admin.1
+manpages: ctrlproxy.1 ctrlproxyd.8 ctrlproxy_config.5 ctrlproxy-admin.1
 
 %.tmp.xml: %.xml
 	$(XSLTPROC) --xinclude docbook.xsl $< > $@
@@ -18,10 +18,7 @@ manpages: ctrlproxy.1 ctrlproxy_config.5 ctrlproxy-admin.1
 %.html: %.tmp.xml
 	$(XSLTPROC) --xinclude http://docbook.sourceforge.net/release/xsl/current/html/docbook.xsl $< > $@
 
-%.1: %.1.tmp.xml 
-	$(XSLTPROC) http://docbook.sourceforge.net/release/xsl/current/manpages/docbook.xsl $< > $@
-
-%.5: %.5.tmp.xml
+%: %.tmp.xml 
 	$(XSLTPROC) http://docbook.sourceforge.net/release/xsl/current/manpages/docbook.xsl $< > $@
 
 help.xml: admin.xml clients.xml
@@ -40,8 +37,10 @@ distclean:: clean
 install: all
 	$(INSTALL) -d $(DESTDIR)$(mandir)/man1
 	$(INSTALL) -d $(DESTDIR)$(mandir)/man5
+	$(INSTALL) -d $(DESTDIR)$(mandir)/man8
 	$(INSTALL) -d $(DESTDIR)$(docdir)
 	$(INSTALL) -m 0644 ctrlproxy.1 $(DESTDIR)$(mandir)/man1
+	$(INSTALL) -m 0644 ctrlproxyd.8 $(DESTDIR)$(mandir)/man8
 	$(INSTALL) -m 0644 ctrlproxy-admin.1 $(DESTDIR)$(mandir)/man1
 	$(INSTALL) -m 0644 help.txt $(DESTDIR)$(HELPFILE)
 	$(INSTALL) -m 0644 ctrlproxy_config.5 $(DESTDIR)$(mandir)/man5
@@ -49,6 +48,7 @@ install: all
 
 uninstall: 
 	rm -f $(DESTDIR)$(mandir)/man1/ctrlproxy.1 
+	rm -f $(DESTDIR)$(mandir)/man8/ctrlproxy.8 
 	rm -f $(DESTDIR)$(mandir)/man1/ctrlproxy-admin.1 
 	rm -f $(DESTDIR)$(HELPFILE)
 	rm -f $(DESTDIR)$(mandir)/man5/ctrlproxy_config.5 
